[package]
authors = ["Den <mirloxd3@gmail.com>"]
edition = "2021"
name = "near_cashback_contract"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = "1.0.1"
near-sdk = "4.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
